working with buttons

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <div class="header">
+    <section class="header">
         <h6>Select the size</h6>
         <button id="popup" class="btn btn-primary">Select</button>
-    </div>
+    </section>
+    <p id="message"></p>
     <div class="board"></div>
-    <div class="footer">
-        <button class="btn btn-dark">Black</button>
-        <button class="btn btn-warning">Random</button>
-        <button class="btn btn-danger">Reset</button>
-    </div>
+    <section class="footer">
+        <button class="btn btn-dark" onclick="setColor('black')">Black</button>
+        <button class="btn btn-warning" onclick="setColor('random')">Random</button>
+        <button class="btn btn-danger" onclick="resetBoard()">Reset</button>
+    </section>
 
 
 
