eraser button and click function

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <button id="popup" class="btn btn-primary">Select</button>
     </section>
     <p id="message"></p>
+    <p id="draw"></p>
     <div class="board"></div>
     <section class="footer">
         <button class="btn btn-dark" onclick="setColor('black')">Black</button>
         <button class="btn btn-warning" onclick="setColor('random')">Random</button>
+        <button class="btn btn-info" onclick="setColor('white')">Eraser</button>
         <button class="btn btn-danger" onclick="resetBoard()">Reset</button>
     </section>
 
